chore: private repo

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Justin DuJardin <justin.dujardin@sococo.com>",
   "description": "Sococo adapter for Hubot",
   "keywords": "hubot sococo adapter",
+  "private": true,
   "licenses": [
     {
       "type": "MIT",
