feat(login): use the official login sequence
- Make a rest connection, then copy the cookies to bayeux and make that connection
- Hardcoded defaults for various paths assume the LB forwarding configuration, environment variables allow overrides

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "test": "grunt"
   },
   "dependencies": {
-    "faye": "~1.0.1"
+    "cookie": "^0.1.2",
+    "faye": "~1.0.1",
+    "request": "^2.36.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
