--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "test": "grunt"
   },
   "dependencies": {
-    "cookie": "^0.1.2",
-    "faye": "~1.0.1",
-    "request": "^2.36.0"
+    "cookie": "0.1.2",
+    "faye": "1.0.1",
+    "request": "2.36.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-coffee": "~0.6.2",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-coffeelint": "~0.0.6"
+    "grunt": "0.4.1",
+    "grunt-contrib-coffee": "0.6.2",
+    "grunt-contrib-watch": "0.3.1",
+    "grunt-coffeelint": "0.0.6"
   }
 }
