--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   },
   "devDependencies": {
     "grunt": "0.4.1",
+    "grunt-bump": "0.0.15",
+    "grunt-coffeelint": "0.0.6",
     "grunt-contrib-coffee": "0.6.2",
     "grunt-contrib-watch": "0.3.1",
-    "grunt-coffeelint": "0.0.6"
+    "grunt-conventional-changelog": "1.1.0",
+    "grunt-npm": "0.0.2"
   }
 }
